@@ -21,6 +21,8 @@ autopkgtest (3.17) UNRELEASED; urgency=medium
     of relying on the host locale's encoding.
   * tools/adt-setup-vm: Only configure eth0 in ifupdown if it actually exists,
     and then make sure it does not get renamed any more.
+  * Add @builddeps@ build profile parsing fallback for libdpkg-perl < 1.04;
+    just ignore all build profiles.
 
  -- Martin Pitt <mpitt@debian.org>  Fri, 28 Aug 2015 05:29:25 +0200
 
